# chess-game

./: Bishop.cpp  Board.cpp  CMakeLists.txt  Game.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp  Tile.cpp  Utils.cpp  board.txt  main.cpp  report.docx
include/: Bishop.h  Board.h  Color.h  Game.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h  Tile.h  utils.h
include/errors/: ErrorCode.h
logger/: Logger.cpp  Logger.h
